--- a/package.json
+++ b/package.json
@@ -4,12 +4,23 @@
   "description": "Fullstack Review",
   "main": "server/index.js",
   "scripts": {
-
+    "react-dev": "webpack --config ./webpack.config.js --mode development -w",
+    "start": "nodemon server/index.js",
+    "data": "nodemon database/index.js"
   },
   "keywords": [],
   "author": "Josh Hertz",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
   "devDependencies": {
     "@babel/core": "^7.11.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
